objects/Price_List__c/Price_List__c.object-meta.xml
<CustomObject>
    <label>PriceBook</label>
    <nameField>
        <label>Price Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>