objects/Price_List__c/fields/Generated_Status__c.field-meta.xml
<CustomField>
    <fullName>Generated_Status__c</fullName>
    <label>Generated Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generated_Status</valueSetName>
    </valueSet>
</CustomField>