objects/Price_List__c/recordTypes/Customer_Price_List.recordType-meta.xml
<RecordType>
    <fullName>Customer_Price_List</fullName>
    <active>false</active>
    <label>Customer Price List</label>
</RecordType>