objects/Price_List__c/recordTypes/Product_Price_List.recordType-meta.xml
<RecordType>
    <fullName>Product_Price_List</fullName>
    <active>true</active>
    <label>Product Price List</label>
</RecordType>