objects/Price_List__c/recordTypes/Regional_Price_List.recordType-meta.xml
<RecordType>
    <fullName>Regional_Price_List</fullName>
    <active>true</active>
    <label>Regional Price List</label>
</RecordType>